# hwp-bridge

./: .dockerignore  .env.example  .gitignore  091-115_데이터설명서.hwp  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MONETIZATION.md  NOTICE  README.md  docker-compose.yml  mcp.json  plan.md  smithery.yaml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy-cloud-run.yml  deploy-docker.yml  release.yml  v1-gate.yml
corpus/: README.md
crates/hwp-cli/: Cargo.toml
crates/hwp-cli/src/: main.rs
crates/hwp-core/: Cargo.toml
crates/hwp-core/src/: lib.rs
crates/hwp-core/src/converter/: mod.rs  structured.rs
crates/hwp-core/src/export/: mod.rs
crates/hwp-core/src/parser/: chart.rs  chart_schema.rs  chart_types.rs  document.rs  header.rs  mod.rs  ole.rs  primitives.rs  record.rs  record_nom.rs  section.rs  summary.rs
crates/hwp-core/src/parser/bodytext/: mod.rs  table.rs
crates/hwp-core/src/parser/docinfo/: bin_data.rs  border_fill.rs  bullet.rs  char_shape.rs  compatibility.rs  distribute_doc_data.rs  doc_data.rs  document_properties.rs  face_name.rs  id_mappings.rs  mod.rs  numbering.rs  para_head.rs  para_shape.rs  style.rs  tab_def.rs
crates/hwp-core/tests/: docinfo_integration.rs  export_integration.rs
crates/hwp-gui/: index.html  package-lock.json  package.json
crates/hwp-gui/src/: App.css  App.jsx
crates/hwp-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/hwp-gui/src-tauri/capabilities/: default.json
crates/hwp-gui/src-tauri/src/: main.rs
crates/hwp-mcp/: Cargo.toml
crates/hwp-mcp/src/: http_server.rs  main.rs  tools.rs
crates/hwp-mcp/tests/: stdio_integration.rs
crates/hwp-types/: Cargo.toml
crates/hwp-types/src/: bindata.rs  border_fill.rs  control.rs  docinfo.rs  document.rs  face_name.rs  lib.rs  record.rs  structured.rs  style.rs  tags.rs
crates/hwp-wasm/: Cargo.toml
crates/hwp-wasm/src/: lib.rs
crates/hwp-web/: Cargo.toml
deploy/nginx/: nginx.conf
deploy/prometheus/: prometheus.yml
docs/: BENCHMARKS.md  FORMAT_SUPPORT.md  SECURITY.md  SMITHERY.md  hwp_rust_spec.md
docs/guides/: CORPUS.md  TDD_GUIDE.md  TEST_MATRIX.md  TEST_STRATEGY.md  V1_RELEASE_GATE.md
docs/operations/: DEPLOYMENT.md  MONITORING.md  RUNBOOK.md
docs/specs/: API_SPEC.md  ARCHITECTURE.md  DATA_MODEL.md  MCP_SERVER.md  P0_CHECKLIST.md  PRD.md  V1_ACCEPTANCE.md
future/: README.md
future/deploy/nginx/: nginx.conf
future/deploy/prometheus/: prometheus.yml
future/hwp-web/: API_SPEC_REST.md  ARCHITECTURE_WEB.md  DEPLOYMENT_WEB.md  MONITORING_WEB.md  PRD_WEB.md  RUNBOOK_WEB.md
scripts/: corpus_pack.sh  corpus_run.sh  corpus_scan.py  v1_gate.py
specs/001-hwp-types-impl/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-hwp-types-impl/checklists/: requirements.md
