[package]
name = "hwp-cli"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-Proprietary"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15.7"
hwp-core = { version = "0.1.0", path = "../hwp-core" }
hwp-types = { version = "0.1.0", path = "../hwp-types" }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde_json = "1.0.145"
