[package]
name = "hwp-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
hwp-core = { version = "0.1.0", path = "../hwp-core" }
hwp-types = { version = "0.1.0", path = "../hwp-types" }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
