[package]
name = "hwp-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for HWP document processing"

[[bin]]
name = "hwp-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
hwp-core = { version = "0.1.0", path = "../hwp-core" }
hwp-types = { version = "0.1.0", path = "../hwp-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
