[package]
name = "hwp-mcp"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "MCP server for HWP document processing"

[features]
# Dev UI is off by default. Enable only for local testing.
# Example: cargo run -p hwp-mcp --features dev-ui
dev-ui = []

[[bin]]
name = "hwp-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
hwp-core = { version = "0.1.0", path = "../hwp-core" }
hwp-types = { version = "0.1.0", path = "../hwp-types" }
mcp-sdk-rs = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
