[package]
name = "hwp-wasm"
version = "0.1.0"
edition = "2024"
description = "WebAssembly bindings for HWP document parsing"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Workspace dependencies
hwp-core = { version = "0.1.0", path = "../hwp-core" }
hwp-types = { version = "0.1.0", path = "../hwp-types" }

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

# Serialization (re-use from hwp-types)
serde = { version = "1.0", features = ["derive"] }

# Console logging for debugging (optional)
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]
