[package]
name = "hwp-gui"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# hwp-core를 사용하여 파싱 로직 재사용
hwp-core = { path = "../../hwp-core" }
hwp-types = { path = "../../hwp-types" }
